# screenplan-contracts-py

./: .gitignore  Makefile  README.md  pyproject.toml
screenplan_contracts/: __init__.py  models.py  validation.py
screenplan_contracts/_generated/: __init__.py  common_schema.py  event_status_schema.py  script_action_artifacts.py  script_action_artifacts_schema.py  script_action_data_schema.py  script_action_log_schema.py  script_action_schema.py  script_schema.py  script_status_schema.py
scripts/: build.sh  clean.sh  codegen.sh  deploy.sh
tests/: test_examples.py
